--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   <body>
     <!-- Add notification bar -->
     <div class="demo-notification" id="demoNotification">
-      <p>This website is just a demo website. Some functionality may not work.</p>
+      <p>This website is just a demo website. Some features may not work as expected</p>
       <button class="close-btn" id="closeNotification">×</button>
     </div>
     <!-- Navigation -->
